--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,6 +1,6 @@
 <?php
 $header = <<<'EOF'
-This file is part of the zibios/wrike-php-guzzle package.
+This file is part of the wedocreatives/wrike-php-guzzle package.
 
 (c) Zbigniew Ślązak
 
